--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "gulp-start",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "browserslist": [
     "last 5 versions"
   ],
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
   "scripts": {
     "start": "gulp",
-    "production": "gulp --production"
+    "production": "gulp --production",
+    "webpack": "npx webpack",
+    "gulp": "npx gulp",
+    "dev": "cross-env NODE_ENV=development npx webpack --mode development",
+    "build": "cross-env NODE_ENV=production npx webpack --mode production",
+    "webpack-watch": "cross-env NODE_ENV=development npx webpack --mode development --watch",
+    "webpack-server": "cross-env NODE_ENV=development npx webpack serve"
   },
   "repository": {
     "type": "git",
@@ -29,9 +30,21 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.5",
     "browser-sync": "^2.27.10",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.1.0",
+    "csv-loader": "^3.0.5",
     "del": "^6.1.1",
     "eslint": "^8.23.1",
+    "eslint-webpack-plugin": "^3.2.0",
+    "file-loader": "^6.2.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
@@ -58,8 +71,21 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-css": "^1.1.0",
     "gulp-webp-html": "^1.0.2",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^6.0.1",
     "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
-    "webpack-stream": "^7.0.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-stream": "^7.0.0",
+    "xml-loader": "^1.2.1"
+  },
+  "dependencies": {
+    "jquery": "^3.6.1",
+    "normalize.css": "^8.0.1"
   }
 }
